kubernetes/Cluster-Int-Temp/deployments/apps/spoolman/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: spoolman
    namespace: apps
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:hel3Q7oK5m8PZIVzfB0vPLheybAhXj0nUAzTxA==,iv:uFjq3BRqcOKnGGuSFZz7Ym3O4ur+MFQeSkHIDoeQr6c=,tag:TScjGVm1BFhij2Qn1UaCBg==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:XvBYwC9hksM=,iv:jS35crtmtTP1OjFX8VKZhGmTQglnSeJW0O4/KycGXJI=,tag:fK3n1lrvBGKMXLezSYIlkQ==,type:str]
              namespace: ENC[AES256_GCM,data:LT9dVg==,iv:fFm4viA6Kqs9ksJni6zDbV0kVimU0mCOg6LdSDyhjsg=,tag:+tGaMZi/E6C4bGoRf0G5yQ==,type:str]
              port: ENC[AES256_GCM,data:ARYRiA==,iv:6rFo/GUM94DFPevWK+kn5tT7mcTewMbhGf7LAemjCAU=,tag:ByfdUM5/VKT8yF2bJs3hRg==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:2thlFes/8Q4s3YZ/VDE=,iv:e2Z3FgSROq65EXbyU6/YvPg+Rc/iinApylHAq4N3KW0=,tag:JziStMQy/P/c3KLROyBlSQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3N3ZnenR0OWw5TUxIdGJy
[...]
            bpOaxZy9zAf5TkYdVRf+dTmr1hcCC2VqfqYQ7gtUK2sR9WPGRHVaGA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-15T00:42:34Z"
    mac: ENC[AES256_GCM,data:f9wKlNg7t26ADA9Ax/ziG0aML1sH6nSc9n4J4ihYKs+7nAQ6/JOFdQfOe8LZQPTfl8L9/e8I0lmweuPhPN3i4M0k8cQtWUrSzb0pAa8vEUtCHAsYFB75rjnLXIwHIlFGrABRgOUXgSWqJ1A/pE+T8TNsW8dUtdPs3Y/29DeF4+0=,iv:3AnC8P8rEeIKN/FyHEzi3jt+eG50BWYMJ/UJ1NReTxo=,tag:6NPrTU9NzHKBzjSMK5v+Mw==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks|dnsZones|email|commonName|dnsNames|config)$
    version: 3.8.1
